# sequoia-map

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  dev.sh  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.yml  justfile  security_best_practices_report.md
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  deploy-images.yml  iris-release.yml
claims-client/: Cargo.toml  Trunk.dev.toml  Trunk.local.toml  Trunk.native.toml  Trunk.toml  index.html  input.css
claims-client/src/: app.rs  history.rs  main.rs
client/: Cargo.toml  Trunk.dev.toml  Trunk.native.toml  Trunk.toml  index.html  input.css
client/docs/: gpu_text_parity_checklist.md
client/scripts/: refresh_map_background.py
client/src/: animation.rs  app.rs  assets.rs  canvas.rs  claim_labels.rs  claims.rs  colors.rs  defense.rs  heat.rs  history.rs  icons.rs  label_layout.rs  main.rs  map_intel.rs  minimap.rs  overlay_sizing.rs  playback.rs  render_loop.rs  season_scalar.rs  sidebar.rs  spatial.rs  sse.rs  territory.rs  tiles.rs  time_format.rs  timeline.rs  tower.rs  viewport.rs
client/src/gpu/: connection.wgsl  glow.wgsl  icon.wgsl  mod.rs  territory.wgsl  text.wgsl  tile.wgsl
client/src/renderer/: mod.rs
dev/: Caddyfile
mods/wynn-iris/: README.md  build-target.sh  build.gradle  gradle.properties  live-dev.sh  settings.gradle
mods/wynn-iris/profiles/: 1.21.11.properties  1.21.4.properties
mods/wynn-iris/scripts/: generate_update_manifest.sh
mods/wynn-iris/src/main/java/io/iris/reporter/: AdvancementTerritoryCollector.java  ConfigStore.java  DataValidityGate.java  GatewayClient.java  GatewayModels.java  GuildSeasonMenuProbe.java  IrisAutoUpdater.java  IrisReporterClient.java  LegacyMessageScraper.java  PacketSignalBridge.java  ReporterConfig.java  ReporterRuntime.java  ReporterSecurity.java  RuntimeVersionResolver.java  SeasonScalarMath.java
mods/wynn-iris/src/main/java/io/iris/reporter/mixin/: ClientPlayNetworkHandlerMixin.java
mods/wynn-iris/src/main/java/io/iris/reporter/updater/: ApplyResultCode.java  SignatureVerifier.java  UpdateJob.java  UpdateManifest.java  UpdateStage.java
mods/wynn-iris/src/main/resources/: fabric.mod.json  wynn-iris.mixins.json
mods/wynn-iris/src/test/java/io/iris/reporter/: AdvancementTerritoryCollectorTest.java  DataValidityGateTest.java  GatewayClientSubmitResponsePolicyTest.java  GatewayClientTransportPolicyTest.java  GuildSeasonMenuProbeTest.java  IrisAutoUpdaterInstallerTest.java  IrisAutoUpdaterReleaseSelectionTest.java  IrisAutoUpdaterVersionTest.java  IrisReporterClientCommandClickTest.java  LegacyMessageScraperTest.java  MixinConfigWiringTest.java  PacketSignalBridgeTest.java  ReporterConfigDefaultsTest.java  ReporterRuntimeAsyncPollTest.java  ReporterRuntimeQueueSchedulingTest.java  ReporterRuntimeSafetyRegressionTest.java  ReporterRuntimeTokenExpiryTest.java  ReporterSecuritySessionProofTest.java  SeasonScalarMathTest.java
mods/wynn-iris/src/test/java/io/iris/reporter/updater/: SignatureVerifierTest.java  UpdateManifestTest.java
ops/backup/: backup_now.sh  list_backups.sh  restore_backup.sh
ops/caddy/: Caddyfile  Caddyfile.coolify  Dockerfile.coolify
ops/postgres/: precheck_17_to_18.sh  upgrade_17_to_18.sh  verify_18_postcutover.sh
ops/prometheus/alerts/: sequoia-map-alerts.yml
scripts/: local-postgres.sh  require-free-port.sh
server/: Cargo.toml
server/migrations/: 001_territory_history.sql  002_stream_seq.sql  003_events_recorded_stream_seq.sql  004_season_scalar_samples.sql  005_event_colors.sql  006_guild_color_cache.sql  007_season_guild_observations.sql  008_season_guild_observation_metrics.sql  009_deduplicate_season_observation_indexes.sql  010_canonical_ingest.sql  011_claim_layouts.sql  012_season_metadata.sql
server/src/: app.rs  config.rs  db_migrations.rs  db_sqlx.rs  main.rs  state.rs
server/src/routes/: api.rs  claims.rs  history.rs  http_util.rs  ingest.rs  mod.rs  sse.rs
server/src/services/: extra_data_loader.rs  guild_color_loader.rs  guild_evictor.rs  mod.rs  retention_cleaner.rs  season_components.rs  season_data.rs  season_race.rs  season_scalar_estimator.rs  season_scalar_forecast.rs  snapshot_service.rs  territory_poller.rs  wynncraft_api.rs
server/static/: claims-launcher.html
services/sequoia-ingest/: Cargo.toml  Dockerfile  README.md
services/sequoia-ingest/src/: main.rs
shared/: Cargo.toml
shared/src/: claims.rs  colors.rs  events.rs  history.rs  ingest.rs  lib.rs  map_intel.rs  season_rating.rs  territory.rs  tower.rs  treasury.rs
