[workspace]
members = ["shared", "server", "client"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = "s"

[profile.release.package."sequoia-client"]
opt-level = 3

[profile.release.package."sequoia-server"]
opt-level = 3

[profile.release.package."sequoia-shared"]
opt-level = 3
