[package]
name = "sequoia-client"
edition.workspace = true
version.workspace = true

[dependencies]
sequoia-shared = { path = "../shared" }
leptos = { version = "0.7", default-features = false, features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "EventSource",
    "MessageEvent",
    "Event",
    "PointerEvent",
    "WheelEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "KeyboardEvent",
    "MouseEvent",
    "DomRect",
    "CssStyleDeclaration",
    "Performance",
    "EventTarget",
    "AddEventListenerOptions",
    "TextMetrics",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
] }
wgpu = { version = "24.0", default-features = false, features = ["wgsl", "webgpu", "webgl"] }
bytemuck = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
chrono = { workspace = true }
