[package]
name = "sequoia-ingest"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
getrandom = "0.2"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sequoia-shared = { path = "../../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono"] }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["chrono", "bundled"] }
sha2 = "0.10"
hex = "0.4"
ipnet = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
